--- a/JavaScript/LearningCortex11/LearningCortex.html
+++ b/JavaScript/LearningCortex11/LearningCortex.html
@@ -50,13 +50,13 @@
 		<td>
 			<table>
 				<tr>
-					<td><img src="reseau11.svg" width="300" height="200" /></td>
+					<td><img src="reseau11.svg" width="400" height="300" /></td>
 				</tr>
 				<tr>
-					<td>Performance: <output id="performance" value="XX.X">XX.X</output></td>				
+					<td><b>Performance: <output id="performance" value="XX.X">XX.X</output></b></td>				
 				</tr>
 				<tr>
-					<td><textarea rows="15" cols="50" id="reseau" value="0" readonly="readonly" height="300"></textarea></td>
+					<td><textarea rows="10" cols="40" id="reseau" value="0" readonly="readonly" height="300"></textarea></td>
 				</tr>
 				<tr>
 					<td><button type="button" onClick="javascript:enregistre()"> Enregistrer le réseau .ino </button></td>	
